--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bahubali-ak-portfolio",
   "version": "0.1.0",
-  "homepage": "https://bahubaliak.github.io/",
+  "homepage": "https://bahubaliak.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
